# MiniAudio-Unity

./: .editorconfig  .gitignore  .gitmodules  imgui.ini
Assets/: InitTestScene637889360859292547.unity  MainSampleScene.unity  MiniAudio.buildconfiguration  Test.buildconfiguration  sample.unity
Assets/BuildConfigurations/: MiniAudio_Release_Il2Cpp.buildconfiguration  MiniAudio_Release_Mono.buildconfiguration
Assets/GlobalEntitiesDependencies/: GlobalEntitySceneDependency.asset
Assets/MainSampleScene/: AudioTest.unity
Assets/Math/: Math.cs  MathTest.cs
Assets/MiniAudio/: BindingTest.cs  CommonImports.cs  ConstantImports.cs  DefaultLogInitialization.cs  DefaultMiniAudioInitializationProxy.cs  MiniAudio.asmdef  MiniAudioHandler.cs  MiniAudioInitialization.cs  MiniAudioTest.cs  NativeDebug.cs
Assets/MiniAudio.Entities.Demo/: AudioClipUi.cs  MIniAudio.Entities.Demo.asmdef  UIDocumentAuthoring.cs
Assets/MiniAudio.Tests/: MiniAudio.Tests.asmdef
MiniAudio.Unity.Bindings/: CMakeLists.txt
MiniAudio.Unity.Bindings/headers/: audio.h  debug.h
MiniAudio.Unity.Bindings/src/: audio.cpp  debug.cpp
MiniAudio.Unity.Bindings/tests/: doctest.h  main.cpp
MiniAudio.Unity.Stub/: .editorconfig  CMakeLists.txt
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
UIElementsSchema/: UIElements.xsd  Unity.Editor.Bridge.xsd  Unity.Entities.Editor.UIElements.xsd  Unity.Entities.Editor.xsd  Unity.Properties.UI.xsd  UnityEditor.UIElements.xsd  UnityEngine.UIExtras.xsd
(+53 files in other folders)
